# MAOL

./: .gitignore  CITATION.cff  LICENSE  README.md  README.zh-CN.md  convert_e8_to_submission.py  environment.yml  eval.sh  grade_severity.py  infer.sh  pyproject.toml  requirements.txt  setup.sh  train.sh
baseline/: __init__.py  caculate_metric.py  test_model.py  train_model.py
configs/: class_name.txt  dataset.yaml
severity/: __init__.py  severity_classifier.py
severity/models/: __init__.py  severity_classifier.py
severity/scripts/: eval_predicted_instances.py  eval_resnet18.py  eval_rule_based.py  eval_rule_based_fixbins.py  eval_rule_based_predicted.py  make_split.py  make_split4.py  predict_yolo_val.py  prepare_yolo_severity_split.py  train_severity_baseline_ce.py  train_yolo_severity_split.py
severity/splits/: build_dataset_split1.py  make_split1.py  make_split6.py  split.json  split1.json  split2.json  split3.json  split4.json  split5.json
severity/utils/: grade_schema.py  instance_matching.py  losses.py  metrics.py
