[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maol-severity"
version = "0.1.0"
description = "Morphology-aware ordinal learning for fine-grained industrial defect severity grading."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["severity*", "baseline*"]
